--- a/app/src/main/res/layout/activity_industries.xml
+++ b/app/src/main/res/layout/activity_industries.xml
@@ -48,17 +48,15 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:paddingTop="8dp"
         android:layout_marginBottom="24dp"
         android:gravity="center"
-        android:horizontalSpacing="30dp"
         android:numColumns="2"
-        android:paddingStart="15dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="8dp"
+        android:scrollbars="none"
         android:textAlignment="center"
         android:verticalSpacing="20dp"
-        android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/Next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
