--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -81,7 +81,8 @@
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_vertical"
         android:hint=""
-
+        android:singleLine="true"
+        android:textColor="#000"
         android:maxLines="1"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,6 +96,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:textColor="#000"
+        android:focusable="true"
+        android:singleLine="true"
         android:background="@null"
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_vertical"
