--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -31,7 +31,7 @@
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:id="@+id/carousel"
-                        app:layout_constraintDimensionRatio="w,9:16"
+                        app:layout_constraintDimensionRatio="h,2:1"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
@@ -71,7 +71,7 @@
                     android:id="@+id/small_industry_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/brandontext_medium"
                     android:text="Newly Added Companies"
@@ -107,7 +107,7 @@
                     android:id="@+id/small_industry_label2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/brandontext_medium"
                     android:text="Browse by Industries"
