--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -32,7 +32,7 @@
                         android:layout_width="0dp"
                         android:layout_height="0dp"
                         android:id="@+id/carousel"
-                        app:layout_constraintDimensionRatio="w,9:16"
+                        app:layout_constraintDimensionRatio="h,2:1"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
