--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,34 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+
     <item
         android:id="@+id/action_learn"
         android:enabled="true"
         android:icon="@drawable/icon_learn"
         android:title="Learn"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_explore"
         android:enabled="true"
         android:icon="@drawable/icon_explore"
         android:title="Explore"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_for_you"
         android:enabled="true"
         android:icon="@drawable/icon_for_you"
         android:title="For You"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_crm"
         android:enabled="true"
         android:icon="@drawable/icon_crm"
         android:title="CRM"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_settings"
         android:enabled="true"
         android:icon="@drawable/icon_settings"
         android:title="Settings"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 </menu>
