--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowTranslucentStatus">true</item>
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
         <item name="android:autofilledHighlight" tools:targetApi="o">@android:color/transparent</item>
         <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
 
@@ -14,6 +14,25 @@
 
     <style name="ChipTextStyle">
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="BrandonTextAppearance">
+        <item name="android:fontFamily">@font/brandontext_medium</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+    <style name="TablayoutText">
+        <item name="android:fontFamily">@font/brandontext_medium</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="CustomToolbar" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="android:textColorSecondary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/brandontext_medium</item>
+
     </style>
 
 </resources>
