--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:background="#00ffffff"
             android:elevation="0dp"
-            app:cardCornerRadius="20dp"
+            app:cardCornerRadius="10dp"
             app:cardUseCompatPadding="true"
             app:layout_constraintDimensionRatio="h,16:9"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:fontFamily="@font/brandontext_medium"
             android:maxLines="2"
             android:singleLine="false"
-            android:text="Vidoe Text"
+            android:text="Video Text"
             android:textColor="@color/heading_dark"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="@+id/cardView"
