--- a/app/src/main/res/layout/fragment_for_you.xml
+++ b/app/src/main/res/layout/fragment_for_you.xml
@@ -29,7 +29,7 @@
                     android:orientation="vertical">
 
                     <androidx.viewpager.widget.ViewPager
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:id="@+id/carousel"
                         app:layout_constraintDimensionRatio="h,2:1"
