--- a/app/src/main/res/layout/item_categories_list.xml
+++ b/app/src/main/res/layout/item_categories_list.xml
@@ -12,28 +12,33 @@
 
         <TextView
             android:id="@+id/heading"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:fontFamily="@font/brandontext_medium"
-            android:text="Popular products for you"
+            android:text=""
             android:textColor="@color/heading_dark"
             android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.example.neelanshsethi.sello.ExpandableHeightGridView
             android:id="@+id/categorygridview"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:horizontalSpacing="-20dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:numColumns="2"
+            android:paddingBottom="10dp"
+            android:gravity="center"
             android:scrollbars="none"
             android:verticalSpacing="20dp"
-            android:paddingBottom="10dp"
-            app:layout_constraintStart_toStartOf="@+id/heading"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/heading">
 
         </com.example.neelanshsethi.sello.ExpandableHeightGridView>
