--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -56,9 +56,9 @@
                         android:id="@+id/cardView"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:layout_marginStart="16dp"
+                        android:layout_marginStart="24dp"
                         android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
+                        android:layout_marginEnd="24dp"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="12dp"
                         app:cardElevation="0dp"
@@ -77,47 +77,196 @@
                             app:layout_constraintTop_toTopOf="parent" />
                     </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:id="@+id/video_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
-                        android:fontFamily="@font/brandontext_medium"
-                        android:text="Video Title goes here"
-                        android:textColor="@color/heading_dark"
-                        android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="@+id/cardView"
-                        app:layout_constraintTop_toBottomOf="@+id/cardView" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <TextView
-                    android:id="@+id/product_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/cl1"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginTop="15dp"
-                    android:fontFamily="@font/brandontext_regular"
-                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusamod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-                    android:textColor="@color/heading_lighter"
-                    android:textSize="16sp"
-                    tools:targetApi="o" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/product_description"
-                    android:layout_marginTop="16dp"
+                    android:layout_below="@id/cl1"
+                    android:layout_marginHorizontal="24dp"
+                    android:layout_marginTop="24dp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintLayout2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="24dp"
+                        android:background="@drawable/round_sand_card"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:paddingBottom="16dp">
+
+                        <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="16dp"
+                            android:fontFamily="@font/brandontext_medium"
+                            android:text="Product Brochure"
+                            android:textColor="@color/heading_dark"
+                            android:textSize="18sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/textView10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginTop="6dp"
+                            android:fontFamily="@font/brandontext_regular"
+                            android:text="Get to know more \nabout all the products \nfrom BYJU’s"
+                            android:textColor="@color/heading_lighter"
+                            android:textSize="16sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="0dp"
+                            android:layout_marginTop="24dp"
+                            android:drawableStart="@drawable/ic_book"
+                            android:fontFamily="@font/brandontext_medium"
+                            android:text="Read full brochure"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toStartOf="@+id/textView8"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+                        <TextView
+                            android:id="@+id/textView8"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableStart="@drawable/ic_file_download"
+                            android:fontFamily="@font/brandontext_medium"
+                            android:text="Download"
+                            android:gravity="center"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            app:layout_constraintBottom_toBottomOf="@+id/textView9"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.5"
+                            app:layout_constraintStart_toEndOf="@+id/textView9"
+                            app:layout_constraintTop_toTopOf="@+id/textView9" />
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView3"
+                        android:layout_width="112dp"
+                        android:layout_height="131dp"
+                        android:layout_marginEnd="24dp"
+                        android:backgroundTint="#783d85"
+                        app:cardCornerRadius="12dp"
+                        app:layout_constraintCircleRadius="12dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:cardElevation="4dp"
+                        android:foregroundGravity="center">
+
+                        <TextView
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="BYJU's"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="24sp"
+                            android:fontFamily="@font/brandontext_medium"/>
+
+
+                    </androidx.cardview.widget.CardView>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:id="@+id/sep1"
+                    android:layout_marginHorizontal="24dp"
+                    android:background="#E6E6E6"
+                    android:layout_below="@id/cl2"
+                    android:layout_marginTop="24dp"/>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cl3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/sep1"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginHorizontal="8dp"
                     android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:fontFamily="@font/brandontext_medium"
+                        android:text="Recco’s offer to your \nclient!"
+                        android:textColor="@color/heading_dark"
+                        android:textSize="22sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/brandontext_medium"
+                        android:text="Here’s a list of offerings"
+                        android:textColor="@color/heading_lighter"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cardView4"
+                        android:layout_width="120dp"
+                        android:layout_height="140dp"
+                        android:layout_marginEnd="16dp"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="4dp"
+                        app:layout_constraintCircleRadius="12dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:foregroundGravity="center">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/blue_background_gradient"
+                            android:scaleType="fitXY"/>
+
+                        <TextView
+                            android:layout_gravity="center"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Recko"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="24sp"
+                            android:fontFamily="@font/brandontext_medium"/>
+
+
+                    </androidx.cardview.widget.CardView>
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_whatsapp"
                         style="@style/Widget.MaterialComponents.Chip.Action"
                         android:layout_width="150dp"
                         android:layout_height="40dp"
-                        android:layout_marginStart="8dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
                         android:checkable="false"
                         android:clickable="true"
                         android:focusable="true"
@@ -133,43 +282,18 @@
                         app:chipIcon="@drawable/ic_whatsapp"
                         app:chipIconSize="25dp"
                         app:chipStartPadding="10dp"
-                        app:layout_constraintEnd_toStartOf="@+id/chip_download"
-                        app:layout_constraintHorizontal_bias="0.5"
-                        app:layout_constraintStart_toStartOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
-                    <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_download"
-                        style="@style/Widget.MaterialComponents.Chip.Action"
-                        android:layout_width="200dp"
-                        android:layout_height="40dp"
-                        android:layout_marginEnd="8dp"
-                        android:checkable="false"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:paddingLeft="-5dp"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:text="Download Brochure"
-                        android:textAppearance="@style/WhatsappChipAppearance2"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="25sp"
-                        app:chipBackgroundColor="#F5F5F5"
-                        app:chipCornerRadius="20dp"
-                        app:chipIcon="@drawable/ic_file_download"
-                        app:chipIconSize="25dp"
-                        app:chipStartPadding="10dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.5"
-                        app:layout_constraintStart_toEndOf="@+id/chip_whatsapp" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl3"
+                    android:id="@+id/cl4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/cl2"
-                    android:layout_marginTop="16dp">
+                    android:layout_below="@+id/cl3"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginHorizontal="8dp">
 
                     <TextView
                         android:id="@+id/textView6"
@@ -228,10 +352,10 @@
                     android:id="@+id/offer_discount_box"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/cl3"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_below="@+id/cl4"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
                     app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                     app:layout_constraintTop_toBottomOf="@+id/spinner">
 
@@ -255,9 +379,10 @@
                 </com.example.neelanshsethi.sello.CustomTextInputLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl4"
+                    android:id="@+id/cl5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:layout_below="@+id/offer_discount_box">
 
                     <com.google.android.material.chip.Chip
@@ -367,9 +492,9 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/cl4"
+                    android:layout_below="@+id/cl5"
                     android:layout_marginTop="24dp"
-                    android:layout_marginBottom="24dp">
+                    android:layout_marginBottom="36dp">
 
                     <TextView
                         android:id="@+id/textView4"
